--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,98 @@
 body {
     background-color: #051116;
-    color: black;
+    text-align: center;
     }
 
 .my_navbar {
     background-color: rgba(0, 0, 0, 0.712);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    width: 100pc;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 80px;
     }
-.corpse{
-    background-color: whitesmoke;
+
+.button {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: none;
+    color: rgb(255, 255, 255);
+    text-decoration: normal;
+    text-align: center;
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    white-space: pre;
+    -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    text-shadow: 0 0 1px #ffffff ,0 0 2px #d1d1d1 , 0 0 3px #c7c7c7 , 0 0 4px #949494 , 0 0 5px #5f5f5f ;
+  }
+
+  .button:hover {
+    color: #ffffff;
+    text-shadow: 0 0 1px #ffffff ,0 0 2px #ffd45e , 0 0 5px #ffbb00 , 0 0 8px #ff6600 , 0 0 12px #ff2600 ;
+  }
+  .corpse{
+    color: rgb(255, 255, 255);
+}
+
+#research input[type=search] {
+	width: 15px;
+	padding-left: 10px;
+	color: transparent;
+	cursor: pointer;
+}
+#research input[type=search]:hover {
+	background-color: rgba(255, 255, 255, 0.096);
+}
+#research input[type=search]:focus {
+	width: 130px;
+	padding-left: 32px;
+	color: #000;
+	background-color: rgba(255, 255, 255, 0.096);
+	cursor: auto;
+}
+#research input:-moz-placeholder {
+	color: transparent;
+}
+#research input::-webkit-input-placeholder {
+	color: transparent;
+}
+input {
+	outline: none;
+}
+input[type=search] {
+	-webkit-appearance: textfield;
+	-webkit-box-sizing: content-box;
+	font-family: inherit;
+	font-size: 100%;
+}
+input::-webkit-search-decoration,
+input::-webkit-search-cancel-button {
+	display: none; 
+}
+input[type=search] {
+	background: #ededed11 url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
+	border: solid 1px#ffffff;
+	padding: 9px 10px 9px 32px;
+	width: 55px;
+	-webkit-border-radius: 10em;
+	-moz-border-radius: 10em;
+	border-radius: 10em;
+	-webkit-transition: all .5s;
+	-moz-transition: all .5s;
+    transition: all .5s;
+    box-shadow: 0 0 1px #ffffff ,0 0 2px #d1d1d1 , 0 0 3px #c7c7c7 , 0 0 4px #949494 , 0 0 5px #5f5f5f
+    
+}
+input[type=search]:focus {
+	width: 130px;
+	background-color: rgb(255, 255, 255);
+	border-color: #ffffff;
+	-webkit-box-shadow: 0 0 5px #ffbb00;
+	-moz-box-shadow: 0 0 5px #ff6600;
+	box-shadow:0 0 2px #ffffff ,0 0 6px #ffd45e , 0 0 10px #ffbb00 , 0 0 14px #ff6600 , 0 0 16px #ff2600 ;
 }
